fixed some cosmetics on the web page, search bar is full width, added some temporary color to the current price and deleted white space between currency symbol and price

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ a{
   .title{
     display: flex;
     flex: 1;
-    color: gold; 
+    color: #0c3c4c; 
     cursor: pointer;
   }
 
@@ -56,7 +56,14 @@ a{
     text-transform: uppercase;
   }
 
-  .tableSymbol{
+  /* .tableSymbol{
     display: flex;
     flex-direction: column;
+  } */
+  .coinRow{
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
   }
+
+  /* style = {{display: "flex", flexDirection: "column",}} */
